--- a/modules/gmap/css/map.css
+++ b/modules/gmap/css/map.css
@@ -9,6 +9,66 @@
     color: brown;
     margin: 0 0 5px 6px;
 }
-.gmp_MapPreview img{
- max-width:inherit;   
+.map_container img{
+    max-width:inherit !important;   
+}
+.mapLicenzetext {
+    color: rgb(68, 68, 68);
+    background-color: rgba(255, 255, 255, 0.49);
+}
+
+
+.map-preview-iumg-container img {
+    width: 175px;
+    cursor:pointer;
+}
+.gmp_map_opts {
+    float: left;
+    width: 100%;
+}
+.map_container {
+    float: left;
+    width: 100%;
+}
+.close_button{
+    float: right;
+    display: block;
+    margin: -17px -21px 10px 0px;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 3px 8px;
+    font-size: 14px;
+    line-height: 1.428571429;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+           color: #ffffff;
+    background-color: #5bc0de;
+    border-color: #46b8da;
+
+}
+.close_button{
+    color: #ffffff;
+    background-color: #39b3d7;
+    border-color: #269abc;
+}
+.map_container.display_as_popup {
+    display:none;
+    position: absolute;
+    z-index: 99999;
+    border: 1px solid gray;
+    border-radius: 4px;
+    _position: fixed;
+    padding: 5px;
+    background-color: white;
+    box-shadow: 0px 0px 16px 6px rgba(255, 255, 255, 0.65);
+    width:auto;
 }
