--- a/css/adminStyles.css
+++ b/css/adminStyles.css
@@ -8,9 +8,13 @@
 
 /* Tabs style */
 #gmpAdminOptionsTabs {
-    position:relative; z-index:1; margin-top:20px;padding:0;    
-    width: 96%;
-}    
+    position: relative;
+    z-index: 1;
+    margin-top: 20px;
+    padding: 0;
+    width: 99%;
+    float: left;
+}
     #gmpAdminOptionsTabs h1 {margin-left:10px; color:#5c5c5c; text-shadow: 0 -1px 0 #fff;} 
     #gmpAdminOptionsTabs .ui-tabs-panel {
             padding:15px; min-height:113px; 
