--- a/modules/gmap/css/map.css
+++ b/modules/gmap/css/map.css
@@ -1,3 +1,6 @@
+.gmp_map_opts  img{
+	max-width:none !important;
+}
 .gmpMarkerInfoWindow {
     width: 290px;
     height: 150px;
@@ -24,7 +27,9 @@
 }
 .gmp_map_opts {
     float: left;
-   
+	margin:5px 0;
+	clear:both;
+
 }
 .map_container {
     float: left;
@@ -34,25 +39,9 @@
     float: right;
     display: block;
     margin: -17px -21px 10px 0px;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    padding: 3px 8px;
-    font-size: 14px;
-    line-height: 1.428571429;
-    border-radius: 4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-           color: #ffffff;
-    background-color: #5bc0de;
-    border-color: #46b8da;
+    
+    padding: 2px 8px !important;
+   
 
 }
 .close_button{
@@ -60,7 +49,7 @@
     background-color: #39b3d7;
     border-color: #269abc;
 }
-.map_container.display_as_popup {
+.gmp_map_opts.display_as_popup {
     display:none;
     position: absolute;
     z-index: 99999;
@@ -70,5 +59,12 @@
     padding: 5px;
     background-color: white;
     box-shadow: 0px 0px 16px 6px rgba(255, 255, 255, 0.65);
-    width:auto;
+	top:50px !important;
+   
+}
+.gmp_map_opts tr{
+	font-size: 0.857142857rem;
+}
+.gmp_map_opts{
+font-family: "Open Sans", Helvetica, Arial, sans-serif !important;
 }
