--- a/css/adminStyles.css
+++ b/css/adminStyles.css
@@ -18,19 +18,21 @@
     #gmpAdminOptionsTabs h1 {margin-left:10px; color:#5c5c5c; text-shadow: 0 -1px 0 #fff;} 
     #gmpAdminOptionsTabs .ui-tabs-panel {
             padding:15px; min-height:113px; 
-            border-top:1px solid #d8d8d8;
+            /*border-top:1px solid #d8d8d8;
             border-bottom:1px solid #d8d8d8; 
-            border-left:1px solid #d8d8d8; 
+            border-left:1px solid #d8d8d8;*/
+			border:1px solid #d8d8d8; 
             -webkit-border-radius: 0;
-            border-radius: 0;background:#FCFCFC;
+            border-radius: 0;
+			background:#FCFCFC;
             width: 80%;
             float: left
     }   
-    #gmpAdminOptionsTabs .ui-tabs-nav {padding:0; width:167px; border:none; border-top:1px solid #d8d8d8; -webkit-border-radius: 0; border-radius: 0; background:none;}    
-    #gmpAdminOptionsTabs .ui-tabs-nav li { top:0; box-sizing: border-box; margin:0; padding:0; width:100%; border-top:none; border-right:0; border-bottom: 1px solid #d8d8d8 !important; border-left:none;-webkit-border-radius: 0; border-radius: 0; background:#f1f1f1;-moz-box-shadow: inset 0 1px 0 #f9f9f9; -webkit-box-shadow: inset 0 1px 0 #f9f9f9; box-shadow: inset 0 1px 0 #f9f9f9;}
-    #gmpAdminOptionsTabs .ui-tabs-nav li.ui-tabs-active { width:168px;background:#FCFCFC;}
-    #gmpAdminOptionsTabs .ui-tabs-nav li.ui-tabs-active a {color:#5c5c5c !important; opacity:1;}
-    #gmpAdminOptionsTabs .ui-tabs-nav li a {padding:10px 10px 10px 40px; width:121px; color:#555; font-weight:bold; font-size:12px; opacity:0.5; box-sizing: border-box;}
+    #gmpAdminOptionsTabs .ui-tabs-nav {padding:0; /*width:167px;*/ border:none; border-top:0px solid #d8d8d8; -webkit-border-radius: 0; border-radius: 0; background:none; margin-bottom: -1px;}
+    #gmpAdminOptionsTabs .ui-tabs-nav li { top:0; box-sizing: border-box; margin:0; padding:0; /*width:100%;*/ border-top:none; border-right:0; /*border-bottom: 1px solid #d8d8d8 !important;*/ border-left:none;-webkit-border-radius: 0; border-radius: 0; /*background:#f1f1f1;-moz-box-shadow: inset 0 1px 0 #f9f9f9; -webkit-box-shadow: inset 0 1px 0 #f9f9f9; box-shadow: inset 0 1px 0 #f9f9f9;*/}
+    #gmpAdminOptionsTabs .ui-tabs-nav li.ui-tabs-active { /*width:168px;*//*background:#FCFCFC;*/ border-bottom: 0 none !important;}
+    #gmpAdminOptionsTabs .ui-tabs-nav li.ui-tabs-active a {color:#5c5c5c !important; opacity:1; background-color: #E5EAF5;}
+    #gmpAdminOptionsTabs .ui-tabs-nav li a {/*padding:10px 10px 10px 40px; width:121px;*/ color:#555; font-weight:bold; font-size:12px; opacity:0.5; box-sizing: border-box;}
     #gmpAdminOptionsTabs .ui-tabs-nav li a:hover {color:#ff7800; opacity:1;}
     #gmpAdminOptionsTabs .ui-tabs-nav li.ui-tabs-selected { margin:0;padding-right:1px; background:#FCFCFC;}
     #gmpAdminOptionsTabs .ui-tabs-nav li.ui-tabs-selected a {opacity:1;}
@@ -106,7 +108,6 @@ label, span, input, button {
 .gmpOptTip, .gmpOptTip span {border:none !important;}
 
 .gmpAdminTemplateSelectedName {float:right; line-height:24px;}
-.gmpSetTemplateOptionButton { width:100%;font-weight:bold;}
 .wrap, #dashboard-widgets .meta-box-sortables, .ui-buttonset {margin:0 !important;}
 .rightText {text-align:right;}
 .gmpLeftCol input[type="checkbox"] { margin-top:11px !important;width:25px !important;}
@@ -228,4 +229,20 @@ width: 100px;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 45px;
+}
+.gmpShortCodePreview span {
+	background-color: #F5F5F5;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
+    color: #333333;
+    display: block;
+    font-size: 13px;
+    line-height: 1.42857;
+    margin: 0 0 10px;
+    padding: 9.5px;
+    word-break: break-all;
+    word-wrap: break-word;
+}
+#gmp_marker_coord_x {
+	margin: 0 !important;
 }
