--- a/css/adminStyles.css
+++ b/css/adminStyles.css
@@ -21,7 +21,7 @@
             /*border-top:1px solid #d8d8d8;
             border-bottom:1px solid #d8d8d8; 
             border-left:1px solid #d8d8d8;*/
-			border:1px solid #d8d8d8; 
+			/*border:1px solid #d8d8d8; */
             -webkit-border-radius: 0;
             border-radius: 0;
 			background:#FCFCFC;
@@ -245,4 +245,25 @@ width: 100px;
 }
 #gmp_marker_coord_x {
 	margin: 0 !important;
+}
+/*We will have fullscreen preview for markers description, but we don't need Save button in fullscreen mode, so - hide it*/
+#wp-fullscreen-save {
+	display: none !important;
+}
+
+
+#gmpEditMapProperties, #gmpEditMapMarkers {
+	width: 440px !important;
+}
+
+#gmpSaveEditedMapMsg {
+    left: 730px;
+    position: absolute;
+    top: 138px;
+}
+.gmpFullScreenLoader {
+	position: fixed;
+	top: 50%;
+	left: 40%;
+	z-index: 300;
 }
